--- a/apps/web/src/components/TabBar.module.css
+++ b/apps/web/src/components/TabBar.module.css
@@ -13,7 +13,7 @@
   display: none;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 767px) {
   .spacer {
     display: block;
     height: calc(62px + env(safe-area-inset-bottom));
